reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 07/07/2020
ms.locfileid: "93204056"
---
# <span data-ttu-id="a2f11-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="a2f11-104">概要</span><span class="sxs-lookup"><span data-stu-id="a2f11-104">SYNOPSIS</span></span>

<span data-ttu-id="a2f11-105">從指定的位置將屬性和值複製到另一個位置。</span><span class="sxs-lookup"><span data-stu-id="a2f11-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="a2f11-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="a2f11-106">SYNTAX</span></span>

### <span data-ttu-id="a2f11-107">路徑 (預設值)</span><span class="sxs-lookup"><span data-stu-id="a2f11-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="a2f11-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="a2f11-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="a2f11-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="a2f11-109">DESCRIPTION</span></span>

<span data-ttu-id="a2f11-110">`Copy-ItemProperty`Cmdlet 會從指定的位置將屬性和值複製到另一個位置。</span><span class="sxs-lookup"><span data-stu-id="a2f11-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="a2f11-111">例如，您可以使用這個指令程式，將一個或多個登錄專案從某個登錄機碼複製到另一個登錄機碼。</span><span class="sxs-lookup"><span data-stu-id="a2f11-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="a2f11-112">範例</span><span class="sxs-lookup"><span data-stu-id="a2f11-112">EXAMPLES</span></span>

### <span data-ttu-id="a2f11-113">範例1：將屬性從登錄機碼複製到另一個登錄機碼</span><span class="sxs-lookup"><span data-stu-id="a2f11-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="a2f11-114">此命令會將名為 "MyProperty" 的屬性從 "MyApplication" 登錄機碼複製到 "MyApplicationRev2" 登錄機碼。</span><span class="sxs-lookup"><span data-stu-id="a2f11-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="a2f11-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="a2f11-115">PARAMETERS</span></span>

### <span data-ttu-id="a2f11-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="a2f11-116">-Credential</span></span>

<span data-ttu-id="a2f11-117">指定具有執行此動作權限的使用者帳戶。</span><span class="sxs-lookup"><span data-stu-id="a2f11-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="a2f11-118">預設為目前使用者。</span><span class="sxs-lookup"><span data-stu-id="a2f11-118">The default is the current user.</span></span>

<span data-ttu-id="a2f11-119">輸入使用者名稱，例如 "User01" 或 "Domain01\User01"，或輸入 **PSCredential** 物件，例如 Cmdlet 所產生的物件 `Get-Credential` 。</span><span class="sxs-lookup"><span data-stu-id="a2f11-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="a2f11-120">若您輸入使用者名稱時，會提示您輸入密碼。</span><span class="sxs-lookup"><span data-stu-id="a2f11-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="a2f11-121">與 Windows PowerShell 一起安裝的任何提供者皆不支援此參數。</span><span class="sxs-lookup"><span data-stu-id="a2f11-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-122">-Destination</span><span class="sxs-lookup"><span data-stu-id="a2f11-122">-Destination</span></span>

<span data-ttu-id="a2f11-123">指定目的地位置的路徑。</span><span class="sxs-lookup"><span data-stu-id="a2f11-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-124">-Exclude</span><span class="sxs-lookup"><span data-stu-id="a2f11-124">-Exclude</span></span>

<span data-ttu-id="a2f11-125">以字串陣列指定此 Cmdlet 排除的專案或專案。</span><span class="sxs-lookup"><span data-stu-id="a2f11-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="a2f11-126">此參數的值會限定 **Path** 參數。</span><span class="sxs-lookup"><span data-stu-id="a2f11-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="a2f11-127">輸入路徑元素或模式，例如 "\*.txt"。</span><span class="sxs-lookup"><span data-stu-id="a2f11-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="a2f11-128">允許使用萬用字元。</span><span class="sxs-lookup"><span data-stu-id="a2f11-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="a2f11-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="a2f11-129">-Filter</span></span>

<span data-ttu-id="a2f11-130">以提供者的格式或語言指定篩選。</span><span class="sxs-lookup"><span data-stu-id="a2f11-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="a2f11-131">此參數的值會限定 **Path** 參數。</span><span class="sxs-lookup"><span data-stu-id="a2f11-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="a2f11-132">篩選的語法 (包括是否使用萬用字元) 取決於提供者。</span><span class="sxs-lookup"><span data-stu-id="a2f11-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="a2f11-133">篩選比其他參數更有效率，因為提供者會在 Cmdlet 取得物件時套用篩選，而不是在抓取物件之後，讓 PowerShell 篩選物件。</span><span class="sxs-lookup"><span data-stu-id="a2f11-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="a2f11-134">-Force</span><span class="sxs-lookup"><span data-stu-id="a2f11-134">-Force</span></span>

<span data-ttu-id="a2f11-135">強制執行命令而不要求使用者確認。</span><span class="sxs-lookup"><span data-stu-id="a2f11-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="a2f11-136">實作會依提供者而異。</span><span class="sxs-lookup"><span data-stu-id="a2f11-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="a2f11-137">如需詳細資訊，請參閱 [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md)。</span><span class="sxs-lookup"><span data-stu-id="a2f11-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-138">-Include</span><span class="sxs-lookup"><span data-stu-id="a2f11-138">-Include</span></span>

<span data-ttu-id="a2f11-139">以字串陣列指定此 Cmdlet 在作業中納入的項目。</span><span class="sxs-lookup"><span data-stu-id="a2f11-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="a2f11-140">此參數的值會限定 **Path** 參數。</span><span class="sxs-lookup"><span data-stu-id="a2f11-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="a2f11-141">輸入路徑元素或模式，例如 "\*.txt"。</span><span class="sxs-lookup"><span data-stu-id="a2f11-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="a2f11-142">允許使用萬用字元。</span><span class="sxs-lookup"><span data-stu-id="a2f11-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="a2f11-143">-LiteralPath</span></span>

<span data-ttu-id="a2f11-144">指定屬性之目前位置的路徑。</span><span class="sxs-lookup"><span data-stu-id="a2f11-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="a2f11-145">與 **Path** 參數不同， **LiteralPath** 的值將完全依照其輸入值來使用。</span><span class="sxs-lookup"><span data-stu-id="a2f11-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="a2f11-146">沒有字元會被視為萬用字元。</span><span class="sxs-lookup"><span data-stu-id="a2f11-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="a2f11-147">如果路徑包含逸出字元，請將它括在單引號中。</span><span class="sxs-lookup"><span data-stu-id="a2f11-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="a2f11-148">單引號可告知 PowerShell 不要將任何字元解釋為 escape 序列。</span><span class="sxs-lookup"><span data-stu-id="a2f11-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-149">-Name</span><span class="sxs-lookup"><span data-stu-id="a2f11-149">-Name</span></span>

<span data-ttu-id="a2f11-150">指定要複製之屬性的名稱。</span><span class="sxs-lookup"><span data-stu-id="a2f11-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="a2f11-151">-PassThru</span></span>

<span data-ttu-id="a2f11-152">傳回代表您正在使用之項目的物件。</span><span class="sxs-lookup"><span data-stu-id="a2f11-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="a2f11-153">根據預設，此 Cmdlet 不會產生任何輸出。</span><span class="sxs-lookup"><span data-stu-id="a2f11-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-154">-Path</span><span class="sxs-lookup"><span data-stu-id="a2f11-154">-Path</span></span>

<span data-ttu-id="a2f11-155">以字串陣列指定要複製之屬性的路徑。</span><span class="sxs-lookup"><span data-stu-id="a2f11-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="a2f11-156">-UseTransaction</span></span>
<span data-ttu-id="a2f11-157">將命令加入使用中交易。</span><span class="sxs-lookup"><span data-stu-id="a2f11-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="a2f11-158">只有交易為處理中狀態時，此參數才有效。</span><span class="sxs-lookup"><span data-stu-id="a2f11-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="a2f11-159">如需詳細資訊，請參閱 about_Transactions。</span><span class="sxs-lookup"><span data-stu-id="a2f11-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="a2f11-160">-Confirm</span></span>
<span data-ttu-id="a2f11-161">在執行 Cmdlet 前提示您確認。</span><span class="sxs-lookup"><span data-stu-id="a2f11-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="a2f11-162">-WhatIf</span></span>

<span data-ttu-id="a2f11-163">顯示執行 Cmdlet 後會發生的情況。</span><span class="sxs-lookup"><span data-stu-id="a2f11-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="a2f11-164">Cmdlet 並不會執行。</span><span class="sxs-lookup"><span data-stu-id="a2f11-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="a2f11-165">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="a2f11-165">CommonParameters</span></span>

<span data-ttu-id="a2f11-166">這個 Cmdlet 支援一般參數： `-Debug` 、 `-ErrorAction` 、 `-ErrorVariable` 、 `-InformationAction` 、、、、、 `-InformationVariable` `-OutVariable` `-OutBuffer` `-PipelineVariable` `-Verbose` 、 `-WarningAction` 和 `-WarningVariable` 。</span><span class="sxs-lookup"><span data-stu-id="a2f11-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="a2f11-167">如需詳細資訊，請參閱 [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md)。</span><span class="sxs-lookup"><span data-stu-id="a2f11-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="a2f11-168">輸入</span><span class="sxs-lookup"><span data-stu-id="a2f11-168">INPUTS</span></span>

### <span data-ttu-id="a2f11-169">System.String</span><span class="sxs-lookup"><span data-stu-id="a2f11-169">System.String</span></span>

<span data-ttu-id="a2f11-170">您可以使用管線將包含路徑的字串傳送至此 Cmdlet。</span><span class="sxs-lookup"><span data-stu-id="a2f11-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="a2f11-171">輸出</span><span class="sxs-lookup"><span data-stu-id="a2f11-171">OUTPUTS</span></span>

### <span data-ttu-id="a2f11-172">無或 System.Management.Automation.PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="a2f11-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="a2f11-173">當您使用 **Passthru** 參數時，此 Cmdlet 會產生代表所複製之專案屬性的 **PsCustomObject** 。</span><span class="sxs-lookup"><span data-stu-id="a2f11-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="a2f11-174">否則，此 Cmdlet 不會產生任何輸出。</span><span class="sxs-lookup"><span data-stu-id="a2f11-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="a2f11-175">注意</span><span class="sxs-lookup"><span data-stu-id="a2f11-175">NOTES</span></span>

<span data-ttu-id="a2f11-176">此 Cmdlet 是針對與任何提供者公開的資料搭配使用所設計。</span><span class="sxs-lookup"><span data-stu-id="a2f11-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="a2f11-177">若要列出工作階段中可用的提供者，請輸入 `Get-PSProvider`。</span><span class="sxs-lookup"><span data-stu-id="a2f11-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="a2f11-178">如需詳細資訊，請參閱 about_Providers。</span><span class="sxs-lookup"><span data-stu-id="a2f11-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="a2f11-179">相關連結</span><span class="sxs-lookup"><span data-stu-id="a2f11-179">RELATED LINKS</span></span>

[<span data-ttu-id="a2f11-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="a2f11-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="a2f11-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="a2f11-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="a2f11-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="a2f11-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="a2f11-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="a2f11-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="a2f11-186">Get-PSProvider</span></span>](Get-PSProvider.md)
